# to-be-rustacean

./: README.md
practice/Beby/my_beby_game/: Cargo.toml
practice/Beby/tutorial/: Cargo.toml
practice/backend/simple-auth-server/: Cargo.toml
practice/command-line-rust/catr/: .gitignore  Cargo.toml
practice/command-line-rust/cutr/: Cargo.toml
practice/command-line-rust/echor/: Cargo.toml
practice/command-line-rust/echor/src/: main.rs
practice/command-line-rust/echor/tests/: cli.rs
practice/command-line-rust/findr/: Cargo.toml
practice/command-line-rust/grepr/: Cargo.toml
practice/command-line-rust/headr/: Cargo.toml
practice/command-line-rust/uniqr/: Cargo.toml
practice/command-line-rust/wcr/: Cargo.toml
practice/rust-crash-course-Vandad/: Cargo.toml
practice/training/src/: lib.rs
rustlings_completed/exercises/: quiz1.rs  quiz2.rs  quiz4.rs
rustlings_completed/exercises/advanced_errors/: advanced_errs2.rs
rustlings_completed/exercises/clippy/: clippy2.rs
rustlings_completed/exercises/collections/: hashmap1.rs  hashmap2.rs  vec2.rs
rustlings_completed/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings_completed/exercises/enums/: enums3.rs
rustlings_completed/exercises/error_handling/: errors2.rs  errors4.rs  errors6.rs
rustlings_completed/exercises/move_semantics/: move_semantics2.rs  move_semantics4.rs  move_semantics5.rs  move_semantics6.rs
toc_easyrust_playlist/: .gitignore  EasyRust_in_Korean.xlsx  TOC - Easy Rust in Korean.xlsx  easy_rust_youtube_playlist_toc.py  requirements.txt
(+133 files in other folders)
