[package]
name = "echor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.15"

[dev-dependencies]
# Easy command initialization and assertions.
assert_cmd = "2"
# Composable first-order predicate functions.
predicates = "2"
